@@ -73,6 +73,14 @@ https://github.com/networkupstools/nut/milestone/9
      and misfired on some platforms, and the way to print had a theoretical
      potential for buffer overflow. [#2915]
 
+ - common driver code:
+   * Removed workarounds trying to migrate legacy driver raised `ALARM`
+     status tokens into modern `alarm_*` function logic. Rather, we keep
+	 supporting them as separate from the modern logic, seeing as `upsmon`
+	 does not care where the token itself was raised for its notifications.
+	 Driver-code related test-cases were updated to reflect these changes.
+	 [issue #2928, PRs #2931 and #2934]
+
  - `usbhid-ups` driver updates:
    * The `cps-hid` subdriver's existing mechanism for fixing broken report
      descriptors was extended to cover a newly reported case of nominal UPS
